# search_engine

./: CMakeLists.txt  README.md
files/: answers.json  config.json
include/: InvertedIndex.h  SearchServer.h  converterJSON.h
nlohmann_json/: CMakeLists.txt
src/: CMakeLists.txt  InvertedIndex.cpp  SearchServer.cpp  converterJSON.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
